# edge-agents

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  LICENSE_HEADER  LICENSE_HEADER_APACHE  NOTICE  PLAN.md  README.md  RELEASING.md  THIRD_PARTY_NOTICES  package.json  split.md
.claude/: settings.local.json
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
components/: README.md
contract/: NOTICE  camera.yaml  capture.yaml  component-constants.json  debug.yaml  deploy.yaml  deployment.yaml  engine.yaml  llama-server.yaml  llmproxy.yaml  ml.yaml  mlinference.yaml  mqtt.yaml  workflow.yaml
docs/: camera-migration.md  component-contract.md  deployment-pipeline.md  device-filesystem.md  ml-rework.md  mqtt-broker-migration.md  workflow-deployment-layers.md
go/: .golangci.yml  .mockery.yaml  CLAUDE.md  Dockerfile  Dockerfile.camera  Dockerfile.engine  go.mod  go.sum
py/: CLAUDE.md
py/onnx/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
py/onnx/app/: config.py  main.py  middleware.py  repository.py
py/onnx/app/api/: models.py
py/onnx/app/handlers/: __init__.py  base.py  raw.py  yolo.py
py/onnx/docs/: architecture.md  bundles.md  handlers.md
py/onnx/examples/models/yolo/: README.md
py/onnx/examples/models/yolo-custom/: README.md  manifest.yaml
py/onnx/scripts/: smoke.sh
py/onnx/tests/: test_constants.py  test_main.py  test_middleware.py  test_raw.py  test_repository.py  test_yolo.py
scripts/: license-headers.mjs
ts/: .prettierrc  CLAUDE.md  README.md  (+4 more)
(+854 files in other folders)
